<resources>
    <string name="app_name">Recify</string>
    <string name="button_signup">Signup</string>
    <string name="button_login">Login</string>
    <string name="back">Cancel</string>
    <string name="reset_password">Reset</string>
    <string name="logout">Logout</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="action_settings">User</string>
    <string name="user_settings">Settings</string>
    <string name="user_mail">Usermail</string>
    <string name="devider_or">OR</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="text_recipe_name">Recipe name</string>
    <string name="text_edit">Save changes</string>
    <string name="text_cancel">Cancel</string>
    <string name="edit_text">Edit</string>
    <string name="text_done">Done Edit</string>
    <string name="text_addStep">Add Instruction</string>
    <string name="text_addIngredient">Add new Item for Ingredientlist</string>
    <string name="text_ingredientName">Ingredients</string>
    <string name="text_stepName">Instructions</string>
    <string name="text_recipeFragName">Recipe:</string>
    <string name="text_ingredientFragName">Ingredient:</string>
    <string name="share_recipe">share_recipe</string>
    <string name="text_ingredientAmount">Amount</string>
    <string name="edit_icon_ingredient">edit_icon_ingredient</string>
    <string name="create_recipe">Create Recipe</string>
    <string name="create_ingredient">Create Ingredient</string>
    <string name="text_instructionFragName">Instructions</string>
    <string name="text_instruction">Instruction:</string>
    <string name="test_new_amount">New amount:</string>
    <string name="text_delete">Delete</string>
    <string name="start_timer">START TIMER</string>
    <string name="text_recipeName">Recipe:</string>
    <string name="amount">amount</string>
    <string name="button_delete_recipe">Delete</string>
    <string name="search_add_ingredient">Add Filter</string>
    <string name="text_recipe_url">Image Url:</string>
    <string name="import_recipe">Import Recipe</string>
    <string name="portionButton">calc Portion</string>
    <string name="incr_hint">1</string>
    <string name="main_activity_recipes">Recipes</string>
    <string name="defaultTextView">TextView</string>
</resources>
