<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/ingredient_item__amount"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ingredient_item_height"
            android:gravity="center"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_alignParentStart="true"
            android:text="@string/text_ingredientAmount"
            style="@style/RecifyTheme.Base.IngredientDetails"/>

        <TextView
            android:id="@+id/ingredient_item__name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/ingredient_item_height"
            android:gravity="center"
            android:layout_marginStart="@dimen/icon_padding"
            android:layout_toEndOf="@+id/ingredient_item__amount"
            android:text="@string/text_ingredientName"
            style="@style/RecifyTheme.Base.IngredientDetails"/>

        <ImageView
            android:id="@+id/edit_ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/icon_padding"
            android:paddingBottom="@dimen/icon_padding"
            android:layout_marginEnd="@dimen/icon_padding"
            android:gravity="center"
            android:visibility="gone"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_edit_black_24dp"
            android:contentDescription="@string/edit_icon_ingredient"/>
    </RelativeLayout>
</LinearLayout>