<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="team3.recipefinder.viewmodel.RecipeDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="top|center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tomatensuppe115_v_zweispaltig" />

        <TextView
            android:id="@+id/ingrediant_name"
            style="@style/RecifyTheme.Base.TitleText"
            android:layout_width="203dp"
            android:layout_height="55dp"
            android:text="@string/text_ingredientName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.009"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <TextView
            android:id="@+id/recipe_name3"
            style="@style/RecifyTheme.Base.TitleText"
            android:layout_width="226dp"
            android:layout_height="49dp"
            android:text="@string/text_stepName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.708"

            />

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/addStepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showAddRecipeDialog"
            android:src="@drawable/ic_add_black_24dp"
            android:tag="@string/text_stepName"
            android:text="@string/text_addStep"
            app:backgroundTint="#cccccc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.417"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.938" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:clickable="false"
            android:onClick="showAddRecipeDialog1"
            android:src="@drawable/ic_add_black_24dp"
            android:text="@string/text_addIngredient"
            app:backgroundTint="#cccccc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.642" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> model.enableEdit()}"
            android:src="@drawable/ic_edit_black_24dp"
            android:text="@string/edit_text"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.754"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.278" />

        <TextView
            android:id="@+id/recipe_name"
            style="@style/RecifyTheme.Base.TitleText"
            android:layout_width="248dp"
            android:layout_height="64dp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.051"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.303"
            tools:text="@string/text_recipe_name" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton

            android:id="@+id/doneEditButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> model.disableEdit()}"
            android:src="@drawable/ic_done_black_24dp"
            android:text="@string/text_done"
            app:backgroundTint="@color/primaryColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.911"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.953" />

        <ListView
            android:id="@+id/ingredientList"
            android:layout_width="296dp"
            android:layout_height="123dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.536">

        </ListView>

        <ListView
            android:id="@+id/stepList"
            android:layout_width="305dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.358"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.829">

        </ListView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>